--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.9)
 project(NumUtils)
 
 option(BUILD_DEBUG OFF)
+option(BUILD_EXAMPLES ON)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
@@ -12,7 +13,7 @@ else()
     set(OPTIMIZATIONS "-O3")
 endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPTIMIZATIONS} -Wall -Wextra -Werror" )
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPTIMIZATIONS} -std=c++1z -Wall -Wextra -Werror" )
 
 if (BUILD_DEBUG)
     add_definitions(-DNUMERICALUTILS_DEBUG_OUTPUT)
@@ -21,10 +22,19 @@ endif()
 include_directories(include)
 include_directories(SYSTEM matplotlib-cpp)
 
-find_package(PythonLibs REQUIRED 3)
-find_package(NumPy REQUIRED)
+if (BUILD_EXAMPLES)
+    find_package(PythonLibs REQUIRED 3)
+    find_package(NumPy REQUIRED)
+    include_directories(SYSTEM ${PYTHON_INCLUDE_DIRS} ${NUMPY_INCLUDE_DIR})
 
-include_directories(SYSTEM ${PYTHON_INCLUDE_DIRS} ${NUMPY_INCLUDE_DIR})
+    add_executable       (Example_Minimal examples/Minimal.cpp)
+    target_link_libraries(Example_Minimal ${PYTHON_LIBRARIES})
+
+    add_executable       (Example_Galerkin examples/Galerkin.cpp)
+    target_link_libraries(Example_Galerkin ${PYTHON_LIBRARIES})
+endif ()
+
+enable_testing()
 
 find_package(GTest REQUIRED)
 include_directories(SYSTEM ${GTEST_INCLUDE_DIRS})
@@ -36,9 +46,5 @@ set(TEST_SOURCES
 
 add_executable       (NumUtilsTest ${TEST_SOURCES})
 target_link_libraries(NumUtilsTest ${PYTHON_LIBRARIES} gtest ${GTEST_BOTH_LIBRARIES})
+add_test ( NUTests NumUtilsTest )
 
-add_executable       (Example_Minimal examples/Minimal.cpp)
-target_link_libraries(Example_Minimal ${PYTHON_LIBRARIES})
-
-add_executable       (Example_Galerkin examples/Galerkin.cpp)
-target_link_libraries(Example_Galerkin ${PYTHON_LIBRARIES})
