--- a/.travis.yml
+++ b/.travis.yml
@@ -4,48 +4,54 @@ branches:
   only:
     - master
 
-# addons:
-#   apt:
-#     sources:
-#         - ubuntu-toolchain-r-test
-#     packages:
-#         - gcc-7
-#         - g++-7
-#     update-alternatives:
-#        - install /usr/bin/gcc gcc /usr/bin/gcc-7 1000
-#        - install /usr/bin/g++ g++ /usr/bin/g++-7 1000
-
 before_install:
- - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
- - sudo apt-get update 
-#  - sudo apt-get install gcc-7 -y
- - sudo apt-get install g++-7 -y
- # update alternatives to use g++-7
- - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1000
- - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1000
- - sudo update-alternatives --config gcc --skip-auto
- - sudo update-alternatives --config g++ --skip-auto
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
 
- # install gtest
- - sudo apt-get install -y libgtest-dev cmake
- - sudo wget https://github.com/google/googletest/archive/release-1.7.0.tar.gz
- - sudo tar xf release-1.7.0.tar.gz
- - cd googletest-release-1.7.0
- - sudo cmake -DBUILD_SHARED_LIBS=ON .
- - sudo make
- - sudo cp -a include/gtest /usr/include
- - sudo cp -a libgtest_main.so libgtest.so /usr/lib/
- 
- # go to build dir
- - cd "${TRAVIS_BUILD_DIR}"
+install:
+  - sudo apt-get install -qq g++-7
+  # update alternatives to use g++-7
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1000
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1000
+  - sudo update-alternatives --config gcc --skip-auto
+  - sudo update-alternatives --config g++ --skip-auto
+
+  # install gtest
+  - sudo apt-get install -y libgtest-dev cmake
+  - sudo wget https://github.com/google/googletest/archive/release-1.7.0.tar.gz
+  - sudo tar xf release-1.7.0.tar.gz
+  - cd googletest-release-1.7.0
+  - sudo cmake -DBUILD_SHARED_LIBS=ON .
+  - sudo make
+  - sudo cp -a include/gtest /usr/include
+  - sudo cp -a libgtest_main.so libgtest.so /usr/lib/
+
+  # install newer LCOV (apt version outdated and fails for new gcov).
+  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+  - tar xf lcov_1.11.orig.tar.gz
+  - sudo make -C lcov-1.11/ install
+  - which lcov
+
+  # Install coverals gem for uploading coverage to coveralls.
+  - gem install coveralls-lcov
+
+  # go to build dir
+  - cd "${TRAVIS_BUILD_DIR}"
 
 before_script:
- - g++ --version
- - ls -l
+  - lcov --version
+  - gcov --version
+  - g++ --version
+  - ls -l
+  - mkdir build
+  - cd build
 
 script:
- - mkdir build
- - cd build
- - cmake -DBUILD_EXAMPLES=OFF ..
- - make
- - ctest
+  - cmake -DCMAKE_BUILD_TYPE=Coverage -DBUILD_EXAMPLES=OFF ..
+  - make
+  - make coverage
+  - ctest
+
+after_success:
+  - lcov --list coverage_out.info.cleaned  # Show test report in travis log.
+  - coveralls-lcov coverage_out.info.cleaned  # uploads to coveralls
