--- a/.travis.yml
+++ b/.travis.yml
@@ -25,15 +25,16 @@ install:
   - sudo make
   - sudo cp -a include/gtest /usr/include
   - sudo cp -a libgtest_main.so libgtest.so /usr/lib/
+  - cd ..
 
   # install newer LCOV (apt version outdated and fails for new gcov).
-  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
-  - tar xf lcov_1.11.orig.tar.gz
+  - sudo wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+  - sudo tar xf lcov_1.11.orig.tar.gz
   - sudo make -C lcov-1.11/ install
   - which lcov
 
   # Install coverals gem for uploading coverage to coveralls.
-  - gem install coveralls-lcov
+  - sudo gem install coveralls-lcov
 
   # go to build dir
   - cd "${TRAVIS_BUILD_DIR}"
