--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -Wall -Wextra" )
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
 
 if (BUILD_DEBUG)
     add_definitions(-DNUMERICALUTILS_DEBUG_OUTPUT)
@@ -42,10 +42,14 @@ set(TEST_SOURCES
     test/NumUtilsTest.cpp)
 
 add_executable       (NumUtilsTest ${TEST_SOURCES})
-target_link_libraries(NumUtilsTest ${PYTHON_LIBRARIES} gtest ${GTEST_BOTH_LIBRARIES})
-add_test ( NUTests NumUtilsTest )
-
 if (${CMAKE_BUILD_TYPE} MATCHES Coverage)
     include(CodeCoverage)
+    target_compile_options(NumUtilsTest PRIVATE
+                           -g -O0 --coverage -fprofile-arcs -ftest-coverage
+                           -fno-inline -fno-inline-small-functions -fno-default-inline)
     SETUP_TARGET_FOR_COVERAGE(coverage NumUtilsTest coverage_out)
 endif()
+target_link_libraries(NumUtilsTest ${PYTHON_LIBRARIES} gtest ${GTEST_BOTH_LIBRARIES})
+
+add_test ( NUTests NumUtilsTest )
+
