--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,37 @@
 language: cpp
+dist: trusty
 
 branches:
   only:
     - master
 
-addons:
-  apt:
-    packages:
-      - doxygen
-      - doxygen-doc
-      - doxygen-latex
-      - doxygen-gui
-      - graphviz
+#addons:
+#  apt:
+#    sources:
+#      - ubuntu-toolchain-r/test
+#    packages:
+#      - g++-7
+#      - doxygen
+#      - doxygen-doc
+#      - doxygen-latex
+#      - doxygen-gui
+#      - graphviz
+#      - cmake
+#      - libgtest-dev
 
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get install -qq g++-7 doxygen doxygen-doc doxygen-latex doxygen-gui graphviz
-  # update alternatives to use g++-7
+  - sudo apt-get install -qq g++-7 cmake doxygen doxygen-doc doxygen-latex doxygen-gui graphviz
+#   update alternatives to use g++-7
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1000
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1000
   - sudo update-alternatives --config gcc --skip-auto
   - sudo update-alternatives --config g++ --skip-auto
 
   # install gtest
-  - sudo apt-get install -y libgtest-dev cmake
   - sudo wget https://github.com/google/googletest/archive/release-1.7.0.tar.gz
   - sudo tar xf release-1.7.0.tar.gz
   - cd googletest-release-1.7.0
@@ -51,7 +56,7 @@ install:
 before_script:
   - lcov --version
   - gcov --version
-  - g++ --version
+  - g++  --version
   - ls -l
 
 script:
@@ -70,14 +75,15 @@ script:
   - doxygen Doxyfile
 
 after_success:
+  - cd "${TRAVIS_BUILD_DIR}"/build-coverage
   - ls -l
   - lcov --list coverage_out.info.cleaned  # Show test report in travis log.
   - coveralls-lcov coverage_out.info.cleaned  # uploads to coveralls
 
 deploy:
   provider: pages
-  skip_cleanup: true
-  local_dir: $TRAVIS_BUILD_DIR/docs/html
-  github_token: $GITHUB_API_KEY
+  skip-cleanup: true
+  local-dir: docs/html
+  github-token: ${GITHUB_API_TOKEN}
   on:
     branch: master
